# inotify-tools

./: .gitignore  configure.ac
libinotifytools/src/: inotifytools.c
man/: inotifywait.1.in  inotifywatch.1.in
t/: inotifywait-N-timefmt.t
